# AIZO-p1

./: CMakeLists.txt  cpp.gitignore  main.cpp
10000 /RandomInt100/: HeapSortTimes.csv  InsertBinarySortTimes.csv  InsertSortTimes.csv  QuickSortTimes.csv
10000/RandomFloat/: HeapSortTimes.csv  InsertBinarySortTimes.csv  InsertSortTimes.csv  QuickSortTimes.csv
10000/RandomFloat100/: HeapSortTimes.csv  InsertBinarySortTimes.csv  InsertSortTimes.csv  QuickSortTimes.csv
10000/RandomFloat33/: HeapSortTimes.csv  InsertBinarySortTimes.csv  InsertSortTimes.csv  QuickSortTimes.csv
10000/RandomFloat50/: HeapSortTimes.csv  InsertBinarySortTimes.csv  InsertSortTimes.csv  QuickSortTimes.csv
10000/RandomFloat66/: HeapSortTimes.csv  InsertBinarySortTimes.csv  InsertSortTimes.csv  QuickSortTimes.csv
10000/RandomFloatDesc/: HeapSortTimes.csv  InsertBinarySortTimes.csv  InsertSortTimes.csv  QuickSortTimes.csv
10000/RandomInt/: HeapSortTimes.csv  InsertBinarySortTimes.csv  InsertSortTimes.csv  QuickSortTimes.csv
10000/RandomInt100/: HeapSortTimes.csv  InsertBinarySortTimes.csv  InsertSortTimes.csv  QuickSortTimes.csv
100000/RandomInt/: HeapSortTimes.csv  (+2 more)
Lib/: Algorithms.h  ArrayDataGenerator.h  CsvGenerator.h  FileReader.h
ReportData/: 10000.xlsx  100000.xlsx  20000.xlsx  40000.xlsx  5000.xlsx  60000.xlsx  80000.xlsx  combined_tables_output.xlsx
Testing/: Reporter.h
UI/: MainMenu.h  MenuUtils.h
Util/: ArrayStorer.h  SortChecker.h  UserInputStorer.h
python/: combined_tables_output.xlsx  genCombinedTable.py  generateChartForEachSortingMethod.py  test.py  xlsxGen.py
(+403 files in other folders)
